[tool.poetry]
name = 'misc-utils-py'
version = '0.2.1'
description = "Misc utilities for python projects."
authors = [
    "Alexander Costas <alexander.costas@mongodb.com>",
    "David Bradford <david.bradford@mongodb.com",
]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/dbradf/misc-utils-py"
packages = [
    { include = "miscutils", from = "src" },
]

[tool.poetry.dependencies]
python = "^3.7"
python-json-logger = "^0.1"
structlog = "^19"
starlette = "^0.13"

[tool.poetry.dev-dependencies]
pytest = "^5.4.3"
pytest-flake8 = "^1.0.6"
pytest-pydocstyle = "^2.1.3"
black = "^19.10b0"
pytest-black = "^0.3.10"
pytest-mypy = "^0.6.2"
mypy = "^0.782"
pytest-cov = "^2.10.0"
pytest-asyncio = "^0.14.0"

[tool.black]
line-length = 100
target-version = ['py37']
